--- a/Style.css
+++ b/Style.css
@@ -4,37 +4,38 @@ body {
     background-color: #f9fafc;
     font-family: 'Open Sans', sans-serif;
     padding-left: 10px;
-    height: 100vh;
+    height: 150vh;
+    margin:0;
 }
 
-.article {
-    color: #69696a;
-    border-left: 4px solid #69696a;
-    padding-left: 10px;
+
+nav ul{
+        color: #69696a;
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        padding: 0 20px 0 0;
+        align-items: flex-start;
+        justify-content: space-around;
 }
-.nav {
-    color: #69696a;
-    display: flex;
-    justify-content: space-between;
-    padding-top: 0%;
-    
+
+h1 {
+    font-size: 20px;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 p{
     padding-left: 5px;
     font-weight:200;
-}
-
-ul {
-    list-style-type: none;
-    padding-left: 0%;
+    color: #69696a;
+    border-left: 4px solid #69696a;
+    padding-left: 10px;
 }
 
 #link {
-    
-    padding-left: 40%;
-   
-    display: flex;
+    padding-left: 30%;
     justify-content: space-between;
 }
 
@@ -45,7 +46,8 @@ a {
 header {
     color: #000;
     font-weight: bold;
-}
+    }
+
 
 button {
     background-color: #000;
@@ -60,7 +62,7 @@ button {
 }
 
 
-.h1 {
+.h2 {
     color: #000;
 }
 
@@ -75,3 +77,90 @@ button {
     padding: 3px;
     
 }
+
+@media only screen and (min-width: 768px) {
+	nav ul {
+        color: #69696a;
+        margin-top: 0;
+        width: 100%;
+        margin: 5px 20px 0 0;
+        flex-direction: row;
+        list-style-type: none;
+    
+    }
+    h1{
+        position: absolute;
+    }
+
+    h2{
+        margin-top: 100px;
+    }
+    header button {
+        width: 13vh;
+        margin: 0 0 3px 0;
+    }
+     main{
+         width: 45vw;
+     }
+
+     .button {
+         width:45vw;
+     }
+
+     #link {
+        padding-left: 75%;
+        justify-content: space-around;
+    }
+	.nav {
+        display: flex;
+        justify-content: right;
+        padding-right: 35px;
+    }
+
+    .circles{
+        position: absolute;
+        display: flex;
+        right: 0em;
+        top: 13em;
+        
+          
+    }
+
+    #large {
+        height: 100px;
+        width: 100px;
+        background-color: rgba(247, 136, 167, 0.6);
+        border-radius: 50%;
+        display: inline-block;
+        transform: scale(1.5);
+        position: relative;
+        right:-50px;
+        z-index: 1;
+      }
+
+      #medium {
+      height: 100px;
+        width: 100px;
+        background-color: rgba(247, 193, 162, 0.7);
+        border-radius: 50%;
+        display: inline-block;
+        transform: scale(1.22);
+        position: relative;
+        right:77px;
+        top:65px;
+        z-index: 3;
+    }
+
+    #small {
+        height: 100px;
+          width: 100px;
+          background-color: rgba(207, 130, 213, 0.6);
+          border-radius: 50%;;
+          display: inline-block;
+          position: relative;
+          right:-30px;
+          top:-5px;
+          z-index: 2;
+      }
+}
+   
