--- a/Style.css
+++ b/Style.css
@@ -155,7 +155,7 @@ button {
         height: 100px;
           width: 100px;
           background-color: rgba(207, 130, 213, 0.6);
-          border-radius: 50%;;
+          border-radius: 50%;
           display: inline-block;
           position: relative;
           right:-30px;
